[gd_scene load_steps=5 format=3 uid="uid://b7rtdn3q3rpmt"]

[ext_resource type="Script" path="res://Scenes/shark.gd" id="1_06tcx"]
[ext_resource type="Texture2D" uid="uid://cr70nql2nb2h8" path="res://Assets/sprites/tubarao.png" id="2_oca0u"]
[ext_resource type="AudioStream" uid="uid://c2sw3n84tygpi" path="res://Assets/sounds/SharkTheme.wav" id="3_5mi33"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_svqsq"]
radius = 5.0
height = 24.0

[node name="Shark" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 64
collision_mask = 4
script = ExtResource("1_06tcx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oca0u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_svqsq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, -4.5)
scale = Vector2(1.5, 0.85)

[node name="SharkTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5mi33")
volume_db = -2.971
autoplay = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
